syntax = "proto3";

option java_package = "org.masreferenceapp";
option java_multiple_files = true;

message UserPreference {
    string first_name = 1;
    string last_name = 2;
    string password = 3;
}